// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot — answer-format-scenarios > '5 × 10^6 with format "? × 10^?" → fra…' 1`] = `
"
###### 5 × 10^6 with format "? × 10^?" → fragment = 5 (mantissa) ######

target: {"answerFormat":"? \\\\times 10^?"}

========== COLLEGE (detailed) ==========
[0] On calcule
    │ @blue{5*10^6}
    │ = 5000000
"
`;

exports[`snapshot — answer-format-scenarios > '10^6 with format "10^?" → fragment = 6' 1`] = `
"
###### 10^6 with format "10^?" → fragment = 6 ######

target: {"answerFormat":"10^?"}

========== COLLEGE (detailed) ==========
[0] On calcule
    │ @blue{10^6}
    │ = 1000000
"
`;

exports[`snapshot — answer-format-scenarios > '√8 with format "?√?" — fragment extra…' 1`] = `
"
###### √8 with format "?√?" — fragment extraction skipped (template-mismatch) ######

target: {"answerFormat":"?\\\\sqrt{?}"}

========== COLLEGE (detailed) ==========
[0] On extrait le facteur carré parfait sous la racine
    │ @blue{sqrt(8)}
    │ = 2sqrt(2)
    │ (On décompose le nombre sous la racine en produit incluant un carré parfait, puis on extrait celui-ci.)
"
`;

exports[`snapshot — basic > '(2 + 3) × (4 − 1) (deux parenthèses)' 1`] = `
"
###### (2 + 3) × (4 − 1) (deux parenthèses) ######

========== PRIMAIRE (detailed) ==========
[0] On additionne 2 et 3
    │ (@blue{2+3})*(4-1)
    │ = 5*(4-1)
[1] On soustrait 1 de 4
    │ 5*(@blue{4-1})
    │ = 5*3
[2] On multiplie 5 par 3
    │ @blue{5*3}
    │ = 15

========== COLLEGE (detailed) ==========
[0] On effectue les calculs entre parenthèses
    │ @blue{(2+3)}*@blue{(4-1)}
    │ = 5*3
    │ (En présence de parenthèses, on commence par calculer ce qu'il y a à l'intérieur.)
[1] Multiplication
    │ @blue{5*3}
    │ = 15
"
`;

exports[`snapshot — basic > '(2 + 3) × 4 (parenthèses)' 1`] = `
"
###### (2 + 3) × 4 (parenthèses) ######

========== PRIMAIRE (detailed) ==========
[0] On additionne 2 et 3
    │ (@blue{2+3})*4
    │ = 5*4
[1] On multiplie 5 par 4
    │ @blue{5*4}
    │ = 20

========== COLLEGE (detailed) ==========
[0] On effectue les calculs entre parenthèses
    │ @blue{(2+3)}*4
    │ = 5*4
    │ (En présence de parenthèses, on commence par calculer ce qu'il y a à l'intérieur.)
[1] Multiplication
    │ @blue{5*4}
    │ = 20
"
`;

exports[`snapshot — basic > '(15 + 5) ÷ 4 (parenthèses + division)' 1`] = `
"
###### (15 + 5) ÷ 4 (parenthèses + division) ######

========== PRIMAIRE (detailed) ==========
[0] On additionne 15 et 5
    │ (@blue{15+5}):/4
    │ = 20:/4
[1] On divise 20 par 4
    │ @blue{20:/4}
    │ = 5

========== COLLEGE (detailed) ==========
[0] On effectue les calculs entre parenthèses
    │ @blue{(15+5)}:/4
    │ = 20:/4
    │ (En présence de parenthèses, on commence par calculer ce qu'il y a à l'intérieur.)
[1] Division
    │ @blue{20:/4}
    │ = 5
"
`;

exports[`snapshot — basic > '2 + 3 × 4 (priorité)' 1`] = `
"
###### 2 + 3 × 4 (priorité) ######

========== PRIMAIRE (detailed) ==========
[0] On multiplie 3 par 4
    │ 2+@blue{3*4}
    │ = 2+12
[1] On additionne 2 et 12
    │ @blue{2+12}
    │ = 14

========== COLLEGE (detailed) ==========
[0] Multiplication
    │ 2+@blue{3*4}
    │ = 2+12
[1] Addition
    │ @blue{2+12}
    │ = 14
"
`;

exports[`snapshot — basic > '2 + 3 × 4 + 5 × 6 (regroupement)' 1`] = `
"
###### 2 + 3 × 4 + 5 × 6 (regroupement) ######

========== PRIMAIRE (detailed) ==========
[0] On multiplie 3 par 4
    │ 2+@blue{3*4}+5*6
    │ = 2+12+5*6
[1] On additionne 2 et 12
    │ @blue{2+12}+5*6
    │ = 14+5*6
[2] On multiplie 5 par 6
    │ 14+@blue{5*6}
    │ = 14+30
[3] On additionne 14 et 30
    │ @blue{14+30}
    │ = 44

========== COLLEGE (detailed) ==========
[0] On effectue d'abord les multiplications et divisions
    │ 2+@blue{3*4}+@blue{5*6}
    │ = 2+12+30
    │ (En l'absence de parenthèses, les multiplications et divisions sont effectuées avant les additions et soustractions.)
[1] Addition
    │ @blue{2+12}+30
    │ = 14+30
[2] Addition
    │ @blue{14+30}
    │ = 44
"
`;

exports[`snapshot — basic > '2 + 3' 1`] = `
"
###### 2 + 3 ######

========== PRIMAIRE (detailed) ==========
[0] On additionne 2 et 3
    │ @blue{2+3}
    │ = 5

========== COLLEGE (detailed) ==========
[0] Addition
    │ @blue{2+3}
    │ = 5
"
`;

exports[`snapshot — basic > '2 × (3 + 4) (parenthèses)' 1`] = `
"
###### 2 × (3 + 4) (parenthèses) ######

========== PRIMAIRE (detailed) ==========
[0] On additionne 3 et 4
    │ 2*(@blue{3+4})
    │ = 2*7
[1] On multiplie 2 par 7
    │ @blue{2*7}
    │ = 14

========== COLLEGE (detailed) ==========
[0] On effectue les calculs entre parenthèses
    │ 2*@blue{(3+4)}
    │ = 2*7
    │ (En présence de parenthèses, on commence par calculer ce qu'il y a à l'intérieur.)
[1] Multiplication
    │ @blue{2*7}
    │ = 14
"
`;

exports[`snapshot — basic > '6 + 12 ÷ 3 (priorité division)' 1`] = `
"
###### 6 + 12 ÷ 3 (priorité division) ######

========== PRIMAIRE (detailed) ==========
[0] On divise 12 par 3
    │ 6+@blue{12:/3}
    │ = 6+4
[1] On additionne 6 et 4
    │ @blue{6+4}
    │ = 10

========== COLLEGE (detailed) ==========
[0] Division
    │ 6+@blue{12:/3}
    │ = 6+4
[1] Addition
    │ @blue{6+4}
    │ = 10
"
`;

exports[`snapshot — basic > '10 − (3 + 2) (parenthèses en soustrac…' 1`] = `
"
###### 10 − (3 + 2) (parenthèses en soustraction) ######

========== PRIMAIRE (detailed) ==========
[0] On additionne 3 et 2
    │ 10-(@blue{3+2})
    │ = 10-5
[1] On soustrait 5 de 10
    │ @blue{10-5}
    │ = 5

========== COLLEGE (detailed) ==========
[0] On effectue les calculs entre parenthèses
    │ 10-@blue{(3+2)}
    │ = 10-5
    │ (En présence de parenthèses, on commence par calculer ce qu'il y a à l'intérieur.)
[1] Soustraction
    │ @blue{10-5}
    │ = 5
"
`;

exports[`snapshot — basic > '10 − 7 + 3' 1`] = `
"
###### 10 − 7 + 3 ######

========== PRIMAIRE (detailed) ==========
[0] On soustrait 7 de 10
    │ @blue{10-7}+3
    │ = 3+3
[1] On additionne 3 et 3
    │ @blue{3+3}
    │ = 6

========== COLLEGE (detailed) ==========
[0] Soustraction
    │ @blue{10-7}+3
    │ = 3+3
[1] Addition
    │ @blue{3+3}
    │ = 6
"
`;

exports[`snapshot — basic > '12 ÷ 3 (division simple)' 1`] = `
"
###### 12 ÷ 3 (division simple) ######

========== PRIMAIRE (detailed) ==========
[0] On divise 12 par 3
    │ @blue{12:/3}
    │ = 4

========== COLLEGE (detailed) ==========
[0] Division
    │ @blue{12:/3}
    │ = 4
"
`;

exports[`snapshot — basic > '20 ÷ 4 − 3 (division puis soustractio…' 1`] = `
"
###### 20 ÷ 4 − 3 (division puis soustraction) ######

========== PRIMAIRE (detailed) ==========
[0] On divise 20 par 4
    │ @blue{20:/4}-3
    │ = 5-3
[1] On soustrait 3 de 5
    │ @blue{5-3}
    │ = 2

========== COLLEGE (detailed) ==========
[0] Division
    │ @blue{20:/4}-3
    │ = 5-3
[1] Soustraction
    │ @blue{5-3}
    │ = 2
"
`;

exports[`snapshot — basic > '24 ÷ (6 + 2) × 3 + (15 + 5) ÷ 4 (cas …' 1`] = `
"
###### 24 ÷ (6 + 2) × 3 + (15 + 5) ÷ 4 (cas complet) ######

========== PRIMAIRE (detailed) ==========
[0] On additionne 6 et 2
    │ 24:/(@blue{6+2})*3+(15+5):/4
    │ = 24:/8*3+(15+5):/4
[1] On divise 24 par 8
    │ @blue{24:/8}*3+(15+5):/4
    │ = 3*3+(15+5):/4
[2] On multiplie 3 par 3
    │ @blue{3*3}+(15+5):/4
    │ = 9+(15+5):/4
[3] On additionne 15 et 5
    │ 9+(@blue{15+5}):/4
    │ = 9+20:/4
[4] On divise 20 par 4
    │ 9+@blue{20:/4}
    │ = 9+5
[5] On additionne 9 et 5
    │ @blue{9+5}
    │ = 14

========== COLLEGE (detailed) ==========
[0] On effectue les calculs entre parenthèses
    │ 24:/@blue{(6+2)}*3+@blue{(15+5)}:/4
    │ = 24:/8*3+20:/4
    │ (En présence de parenthèses, on commence par calculer ce qu'il y a à l'intérieur.)
[1] On effectue d'abord les multiplications et divisions
    │ @blue{24:/8*3}+@blue{20:/4}
    │ = 9+5
    │ (En l'absence de parenthèses, les multiplications et divisions sont effectuées avant les additions et soustractions.)
[2] Addition
    │ @blue{9+5}
    │ = 14
"
`;

exports[`snapshot — basic > '24 ÷ 6 + 2 × 3 (combine division + mu…' 1`] = `
"
###### 24 ÷ 6 + 2 × 3 (combine division + multiplication) ######

========== PRIMAIRE (detailed) ==========
[0] On divise 24 par 6
    │ @blue{24:/6}+2*3
    │ = 4+2*3
[1] On multiplie 2 par 3
    │ 4+@blue{2*3}
    │ = 4+6
[2] On additionne 4 et 6
    │ @blue{4+6}
    │ = 10

========== COLLEGE (detailed) ==========
[0] On effectue d'abord les multiplications et divisions
    │ @blue{24:/6}+@blue{2*3}
    │ = 4+6
    │ (En l'absence de parenthèses, les multiplications et divisions sont effectuées avant les additions et soustractions.)
[1] Addition
    │ @blue{4+6}
    │ = 10
"
`;

exports[`snapshot — fractions > '(2/3) ÷ (5/7) (division)' 1`] = `
"
###### (2/3) ÷ (5/7) (division) ######

========== COLLEGE (detailed) ==========
[0] Diviser par une fraction, c'est multiplier par son inverse
    │ @blue{{2/3}/{5/7}}
    │ = 2/3*7/5
[1] On multiplie les numérateurs entre eux et les dénominateurs entre eux
    │ @blue{2/3*7/5}
    │ = 14/15
"
`;

exports[`snapshot — fractions > '1/3 + 1/6 (PGCD = 6)' 1`] = `
"
###### 1/3 + 1/6 (PGCD = 6) ######

target: {"structure":"reduced-fraction","strictCosmetics":{"reducedFractions":"strict"}}

========== COLLEGE (detailed) ==========
[0] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[1] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[2] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[3] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[4] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[5] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[6] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[7] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[8] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[9] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[10] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[11] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[12] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[13] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[14] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[15] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[16] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[17] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[18] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[19] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[20] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[21] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[22] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[23] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[24] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[25] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[26] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[27] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[28] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[29] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[30] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[31] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[32] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[33] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[34] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[35] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[36] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[37] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[38] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[39] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[40] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[41] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[42] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[43] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[44] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[45] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[46] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[47] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[48] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[49] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[50] On calcule
    │ @blue{1/3+1/6}
    │ = 1/2
"
`;

exports[`snapshot — fractions > '1/4 + 1/6 (PGCD = 12)' 1`] = `
"
###### 1/4 + 1/6 (PGCD = 12) ######

target: {"structure":"reduced-fraction","strictCosmetics":{"reducedFractions":"strict"}}

========== COLLEGE (detailed) ==========
[0] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[1] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[2] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[3] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[4] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[5] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[6] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[7] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[8] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[9] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[10] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[11] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[12] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[13] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[14] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[15] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[16] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[17] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[18] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[19] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[20] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[21] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[22] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[23] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[24] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[25] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[26] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[27] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[28] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[29] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[30] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[31] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[32] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[33] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[34] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[35] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[36] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[37] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[38] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[39] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[40] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[41] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[42] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[43] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[44] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[45] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[46] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[47] On simplifie la fraction
    │ 1/4+@blue{2/12}
    │ = 1/4+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[48] On met les fractions au même dénominateur
    │ @blue{1/4+1/6}
    │ = 3/12+2/12
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[49] On simplifie la fraction
    │ @blue{3/12}+2/12
    │ = 1/4+2/12
    │ (On divise numérateur et dénominateur par leur PGCD.)
[50] On calcule
    │ @blue{1/4+2/12}
    │ = 5/12
"
`;

exports[`snapshot — fractions > '2/3 × 5/7 (multiplication)' 1`] = `
"
###### 2/3 × 5/7 (multiplication) ######

========== COLLEGE (detailed) ==========
[0] On multiplie les numérateurs entre eux et les dénominateurs entre eux
    │ @blue{2/3*5/7}
    │ = 10/21
"
`;

exports[`snapshot — fractions > '2/4 réduction stricte' 1`] = `
"
###### 2/4 réduction stricte ######

target: {"structure":"reduced-fraction","strictCosmetics":{"reducedFractions":"strict"}}

========== COLLEGE (detailed) ==========
[0] On simplifie la fraction
    │ @blue{2/4}
    │ = 1/2
    │ (On divise numérateur et dénominateur par leur PGCD.)
"
`;

exports[`snapshot — radicals > '√2 × √3 → √6' 1`] = `
"
###### √2 × √3 → √6 ######

========== COLLEGE (detailed) ==========
[0] On multiplie les racines (la racine du produit)
    │ @blue{sqrt(2)*sqrt(3)}
    │ = sqrt(6)
    │ (Pour deux nombres positifs a et b, √a × √b = √(a × b). On extrait ensuite l'éventuel carré parfait.)
"
`;

exports[`snapshot — radicals > '√2 × √8 → 4 (collapse complet)' 1`] = `
"
###### √2 × √8 → 4 (collapse complet) ######

========== COLLEGE (detailed) ==========
[0] On extrait le facteur carré parfait sous la racine
    │ sqrt(2)*@blue{sqrt(8)}
    │ = sqrt(2)*2sqrt(2)
    │ (On décompose le nombre sous la racine en produit incluant un carré parfait, puis on extrait celui-ci.)
[1] On calcule
    │ @blue{sqrt(2)*2sqrt(2)}
    │ = 4
"
`;

exports[`snapshot — radicals > '√8 → 2√2' 1`] = `
"
###### √8 → 2√2 ######

========== COLLEGE (detailed) ==========
[0] On extrait le facteur carré parfait sous la racine
    │ @blue{sqrt(8)}
    │ = 2sqrt(2)
    │ (On décompose le nombre sous la racine en produit incluant un carré parfait, puis on extrait celui-ci.)
"
`;

exports[`snapshot — radicals > '√18 → 3√2' 1`] = `
"
###### √18 → 3√2 ######

========== COLLEGE (detailed) ==========
[0] On extrait le facteur carré parfait sous la racine
    │ @blue{sqrt(18)}
    │ = 3sqrt(2)
    │ (On décompose le nombre sous la racine en produit incluant un carré parfait, puis on extrait celui-ci.)
"
`;

exports[`snapshot — radicals > '√45 → 3√5' 1`] = `
"
###### √45 → 3√5 ######

========== COLLEGE (detailed) ==========
[0] On extrait le facteur carré parfait sous la racine
    │ @blue{sqrt(45)}
    │ = 3sqrt(5)
    │ (On décompose le nombre sous la racine en produit incluant un carré parfait, puis on extrait celui-ci.)
"
`;

exports[`snapshot — scientific > '(3 × 10⁴) × (2 × 10⁻²) → 6 × 10²' 1`] = `
"
###### (3 × 10⁴) × (2 × 10⁻²) → 6 × 10² ######

target: {"structure":"scientific"}

========== COLLEGE (detailed) ==========
[0] On écrit la puissance comme un produit
    │ 3*@blue{10^4}*2*10^{-2}
    │ = 3*10*10*10*10*2*10^{-2}
[1] Multiplication
    │ 3*@blue{10*10}*10*10*2*10^{-2}
    │ = 3*100*10*10*2*10^{-2}
[2] Multiplication
    │ 3*@blue{100*10}*10*2*10^{-2}
    │ = 3*1000*10*2*10^{-2}
[3] Multiplication
    │ 3*@blue{1000*10}*2*10^{-2}
    │ = 3*10000*2*10^{-2}
[4] Multiplication
    │ @blue{3*10000}*2*10^{-2}
    │ = 30000*2*10^{-2}
[5] On calcule
    │ @blue{30000*2*10^{-2}}
    │ = 600
[6] On écrit en notation scientifique
    │ @blue{600}
    │ = 6*10^2
    │ (On déplace la virgule pour obtenir un nombre entre 1 et 10, en compensant par une puissance de 10.)
"
`;

exports[`snapshot — scientific > '(5 × 10³) × (4 × 10²) → 2 × 10⁶ (over…' 1`] = `
"
###### (5 × 10³) × (4 × 10²) → 2 × 10⁶ (overflow re-norm) ######

target: {"structure":"scientific"}

========== COLLEGE (detailed) ==========
[0] On écrit la puissance comme un produit
    │ 5*@blue{10^3}*4*10^2
    │ = 5*10*10*10*4*10^2
[1] Multiplication
    │ 5*@blue{10*10}*10*4*10^2
    │ = 5*100*10*4*10^2
[2] Multiplication
    │ 5*@blue{100*10}*4*10^2
    │ = 5*1000*4*10^2
[3] Multiplication
    │ @blue{5*1000}*4*10^2
    │ = 5000*4*10^2
[4] On écrit la puissance comme un produit
    │ 5000*4*@blue{10^2}
    │ = 5000*4*10*10
[5] Multiplication
    │ 5000*4*@blue{10*10}
    │ = 5000*4*100
[6] Multiplication
    │ 5000*@blue{4*100}
    │ = 5000*400
[7] Multiplication
    │ @blue{5000*400}
    │ = 2000000
[8] On écrit en notation scientifique
    │ @blue{2000000}
    │ = 2*10^6
    │ (On déplace la virgule pour obtenir un nombre entre 1 et 10, en compensant par une puissance de 10.)
"
`;

exports[`snapshot — scientific > '0.000037 → 3.7 × 10⁻⁵' 1`] = `
"
###### 0.000037 → 3.7 × 10⁻⁵ ######

target: {"structure":"scientific"}

========== COLLEGE (detailed) ==========
[0] On calcule
    │ @blue{0.000037}
    │ = 37/1000000
"
`;

exports[`snapshot — scientific > '5 000 000 → 5 × 10⁶' 1`] = `
"
###### 5 000 000 → 5 × 10⁶ ######

target: {"structure":"scientific"}

========== COLLEGE (detailed) ==========
[0] On écrit en notation scientifique
    │ @blue{5000000}
    │ = 5*10^6
    │ (On déplace la virgule pour obtenir un nombre entre 1 et 10, en compensant par une puissance de 10.)
"
`;

exports[`snapshot — target-form-scenarios > '1/3 + 1/6 + reduced-fraction strict →…' 1`] = `
"
###### 1/3 + 1/6 + reduced-fraction strict → 1/2 ######

target: {"structure":"reduced-fraction","strictCosmetics":{"reducedFractions":"strict"}}

========== COLLEGE (detailed) ==========
[0] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[1] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[2] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[3] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[4] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[5] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[6] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[7] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[8] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[9] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[10] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[11] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[12] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[13] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[14] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[15] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[16] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[17] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[18] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[19] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[20] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[21] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[22] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[23] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[24] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[25] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[26] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[27] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[28] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[29] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[30] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[31] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[32] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[33] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[34] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[35] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[36] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[37] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[38] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[39] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[40] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[41] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[42] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[43] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[44] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[45] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[46] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[47] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[48] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[49] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[50] On calcule
    │ @blue{1/3+1/6}
    │ = 1/2
"
`;

exports[`snapshot — target-form-scenarios > '1/3 + 1/6 sans target → 3/6 (non rédu…' 1`] = `
"
###### 1/3 + 1/6 sans target → 3/6 (non réduit) ######

========== COLLEGE (detailed) ==========
[0] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[1] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[2] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[3] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[4] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[5] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[6] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[7] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[8] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[9] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[10] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[11] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[12] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[13] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[14] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[15] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[16] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[17] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[18] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[19] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[20] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[21] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[22] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[23] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[24] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[25] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[26] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[27] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[28] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[29] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[30] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[31] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[32] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[33] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[34] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[35] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[36] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[37] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[38] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[39] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[40] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[41] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[42] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[43] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[44] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[45] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[46] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[47] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[48] On met les fractions au même dénominateur
    │ @blue{1/3+1/6}
    │ = 2/6+1/6
    │ (Pour additionner deux fractions, on les écrit avec le même dénominateur (le PPCM des dénominateurs).)
[49] On simplifie la fraction
    │ @blue{2/6}+1/6
    │ = 1/3+1/6
    │ (On divise numérateur et dénominateur par leur PGCD.)
[50] On calcule
    │ @blue{1/3+1/6}
    │ = 1/2
"
`;

exports[`snapshot — target-form-scenarios > '5000000 + scientific target → 5 × 10⁶' 1`] = `
"
###### 5000000 + scientific target → 5 × 10⁶ ######

target: {"structure":"scientific"}

========== COLLEGE (detailed) ==========
[0] On écrit en notation scientifique
    │ @blue{5000000}
    │ = 5*10^6
    │ (On déplace la virgule pour obtenir un nombre entre 1 et 10, en compensant par une puissance de 10.)
"
`;
